First tentative to fix bbroken css in tables of documents` index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -270,6 +270,10 @@ input[type=checkbox]
   padding: 10px;
 }
 
+.cell_of_buttons{
+width: 30% !important;
+}
+
 /* page index */
 
 #btn-new-page {
